[b]Fixes:[/b]
*Attempt to fix playerframe becoming unvisable when combat fade is checked on the player frame and you zone in-out of a portal.