@@ -71,7 +71,7 @@ P['chat'] = {
 	['hyperlinkHover'] = true,
 	['throttleInterval'] = 45,
 	['scrollDownInterval'] = 15,
-	['minWhisperLevel'] = 4,
+	['minWhisperLevel'] = 0,
 	['font'] = 'ElvUI Font',
 	['fontoutline'] = 'NONE',
 }
