@@ -620,10 +620,6 @@ function E:Initialize()
 	
 	self:GetModule('Maps'):Minimap_UpdateSettings()
 	
-	if IsAddOnLoaded('Routes') or IsAddOnLoaded('GatherMate2') then
-		E:Print(L['Detected either the Routes or GatherMate2 addon running, if you wish to use these addons with ElvUI you must type the /farmmode command.'])
-	end
-	
 	collectgarbage("collect");
 end
 
