@@ -170,7 +170,6 @@ L["Deleted %d gray items. Total Worth: %s"] = "Deleted %d gray items. Total Wort
 L["Delete Filter"] = "Delete Filter"
 L["Delete Grays"] = "Delete Grays"
 L["Delete Profile"] = "Delete Profile"
-L["Detected either the Routes or GatherMate2 addon running, if you wish to use these addons with ElvUI you must type the /farmmode command."] = "Detected either the Routes or GatherMate2 addon running, if you wish to use these addons with ElvUI you must type the /farmmode command."
 L["Direction the health bar moves when gaining/losing health."] = "Direction the health bar moves when gaining/losing health."
 L["Disable Blizzard"] = "Disable Blizzard"
 L["Disables the blizzard party/raid frames."] = "Disables the blizzard party/raid frames."
@@ -250,6 +249,7 @@ L["Good Scale"] = "Good Scale"
 L["Good Transition Color"] = "Good Transition Color"
 L["Gossip Frame"] = "Gossip Frame"
 L["Greeting Frame"] = "Greeting Frame"
+L["Grid Size:"] = "Grid Size:"
 L["Group Point"] = "Group Point"
 L["Growth Direction"] = "Growth Direction"
 L["Growth direction of the buffs"] = "Growth direction of the buffs"
@@ -710,4 +710,3 @@ L["Your current resolution is %s, this is considered a %s resolution."] = "Your 
 L["Your items have been repaired for: "] = "Your items have been repaired for: "
 L["Your items have been repaired using guild bank funds for: "] = "Your items have been repaired using guild bank funds for: "
 L["Your version of ElvUI is out of date. You can download the latest version from www.curse.com"] = "Your version of ElvUI is out of date. You can download the latest version from www.curse.com"
-L['Grid Size:'] = true;
